--- a/package.json
+++ b/package.json
@@ -3,13 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "5.0.0",
     "next": "10.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-bootstrap": "1.5.2",
+    "react-dom": "17.0.2",
+    "react-icons": "4.2.0",
+    "react-slick": "^0.28.1",
+    "recoil": "^0.3.1",
+    "recoil-persist": "^2.5.0",
+    "sass": "1.32.12",
+    "slick-carousel": "^1.8.1",
+    "swr": "0.5.5"
   }
 }
