--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "5.0.0",
+    "create-next-app": "^12.0.10",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-bootstrap": "1.5.2",
